# scLean

./: .Rbuildignore  .gitattributes  .gitignore  CLAUDE.md  DESCRIPTION  HDF5-SCHEMA.md  KNOWN-ISSUES.md  LICENSE.md  Makefile  NAMESPACE  NEWS.md  README.md  cleanup  configure  configure.ac  configure.win
.github/workflows/: check-full.yaml
R/: RcppExports.R  chunk-control.R  clustering.R  dispatch-helpers.R  generics.R  hdf5-matrix.R  integration.R  io-10x.R  io-assay.R  io-convert.R  io-load.R  io.R  markers.R  neighbors.R  normalize.R  pca.R  performance.R  scale.R  sclean-class.R  utils.R  vst.R  zzz.R
doc/: sclean.Rmd
inst/: CITATION
man/: CheckResources.Rd  CreateSCleanAssay.Rd  CreateSCleanAssayFromHDF5.Rd  FindAllMarkers.scLeanAssay.Rd  FindClusters.Seurat.Rd  FindMarkers.Seurat.Rd  FindNeighbors.Seurat.Rd  FindVariableFeatures.Seurat.Rd  FindVariableFeatures.scLeanAssay.Rd  HDF5BackedMatrix.Rd  IntegrateData.scLean.Rd  LoadScleanObject.Rd  MemoryReport.Rd  NormalizeData.Seurat.Rd  NormalizeData.scLeanAssay.Rd  PerformanceSnapshot.Rd  RefreshMemory.Rd  RunPCA.Seurat.Rd  ScaleData.Seurat.Rd  ScaleData.scLeanAssay.Rd  SetChunkSize.Rd  SetMaxRAM.Rd  SetThreads.Rd  SetVerbose.Rd  as.Seurat.scLean.Rd  as.scLean.Rd  import_10x_directory.Rd  import_cellranger_h5.Rd  performance-probes.Rd  reexports.Rd  scLeanAssay-class.Rd  show-scLeanAssay-method.Rd
src/: Makevars.in  Makevars.win  RcppExports.cpp  rcpp_exports.cpp  rcpp_io.cpp  rcpp_perf.cpp  rcpp_pipeline.cpp  scLean_types.h
src/io/: mtx_reader.h  (+1 more)
tests/: testthat.R
vignettes/: reference.Rmd  sclean.Rmd
(+80 files in other folders)
